--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -1,4 +1,8 @@
-FROM golang:1.16.2-alpine3.12
+FROM golang:1.17.6 AS helm
+RUN git -C / clone --branch release-v3.8.0 --depth=1 https://github.com/rancher/helm
+RUN make -C /helm
+
+FROM golang:1.17.8-alpine3.15
 
 ARG DAPPER_HOST_ARCH
 ENV ARCH $DAPPER_HOST_ARCH
@@ -9,8 +13,10 @@ RUN if [ "${ARCH}" == "amd64" ]; then \
         curl -sL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.40.1; \
     fi
 
+COPY --from=helm ./helm/bin/helm /usr/local/bin/
+
 ENV DAPPER_ENV REPO TAG DRONE_TAG CROSS
-ENV DAPPER_SOURCE /go/src/github.com/aiyengar2/prometheus-federator/
+ENV DAPPER_SOURCE /go/src/github.com/aiyengar2/helm-project-operator/
 ENV DAPPER_OUTPUT ./bin ./dist
 ENV DAPPER_DOCKER_SOCKET true
 ENV HOME ${DAPPER_SOURCE}
