--- a/scripts/build
+++ b/scripts/build
@@ -5,6 +5,8 @@ source $(dirname $0)/version
 
 cd $(dirname $0)/..
 
+./scripts/build-chart
+
 mkdir -p bin
 if [ "$(uname)" = "Linux" ]; then
     OTHER_LINKFLAGS="-extldflags -static -s"
