--- a/packages/rancher-project-monitoring/package.yaml
+++ b/packages/rancher-project-monitoring/package.yaml
@@ -1,4 +1,2 @@
-url: https://github.com/rancher/charts.git
-subdirectory: charts/rancher-monitoring/100.1.2+up19.0.3
-commit: 6e498bb86c9ed5d67021cc0569eca21c035d9067
+url: local
 version: 0.0.1
