Support federating metrics from the cluster prometheus

--- a/packages/rancher-project-monitoring/charts/templates/prometheus/prometheus.yaml
+++ b/packages/rancher-project-monitoring/charts/templates/prometheus/prometheus.yaml
@@ -215,6 +215,9 @@ spec:
   imagePullSecrets:
 {{ toYaml .Values.global.imagePullSecrets | indent 4 }}
 {{- end }}
+  additionalScrapeConfigs:
+    name: {{ template "project-prometheus-stack.fullname" . }}-federate
+    key: federate-scrape-config.yaml
 {{- if .Values.prometheus.prometheusSpec.containers }}
   containers:
 {{ tpl .Values.prometheus.prometheusSpec.containers $ | indent 4 }}
