Limit federated metrics to only kube-state-metrics or kubelet

--- a/packages/rancher-project-monitoring/charts/files/federate/federate-scrape-config.yaml
+++ b/packages/rancher-project-monitoring/charts/files/federate/federate-scrape-config.yaml
@@ -5,7 +5,7 @@
 
   params:
     'match[]':
-      - '{namespace=~"{{ .Values.global.cattle.projectNamespaces | join "|" }}"}'
+      - '{namespace=~"{{ .Values.global.cattle.projectNamespaces | join "|" }}", job=~"kube-state-metrics|kubelet"}'
 
   static_configs:
     - targets:
