--- a/packages/rancher-project-monitoring/charts/templates/dashboards/rancher/workload-dashboards.yaml
+++ b/packages/rancher-project-monitoring/charts/templates/dashboards/rancher/workload-dashboards.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: {{ .Values.grafana.defaultDashboards.namespace }}
+  namespace: {{ template "project-prometheus-stack.namespace" . }}
   name: rancher-default-dashboards-workloads
   annotations:
 {{ toYaml .Values.grafana.sidecar.dashboards.annotations | indent 4 }}
