--- a/charts/rancher-project-monitoring/0.0.1/templates/grafana/configmap-dashboards.yaml
+++ b/charts/rancher-project-monitoring/0.0.1/templates/grafana/configmap-dashboards.yaml
@@ -10,7 +10,7 @@ items:
   kind: ConfigMap
   metadata:
     name: {{ printf "%s-%s" (include "project-prometheus-stack.fullname" $) $dashboardName | trunc 63 | trimSuffix "-" }}
-    namespace: {{ .Values.grafana.defaultDashboards.namespace }}
+    namespace: {{ template "project-prometheus-stack.namespace" . }}
     labels:
       {{- if $.Values.grafana.sidecar.dashboards.label }}
       {{ $.Values.grafana.sidecar.dashboards.label }}: "1"
