--- a/charts/rancher-project-monitoring/0.0.1/templates/grafana/configmaps-datasources.yaml
+++ b/charts/rancher-project-monitoring/0.0.1/templates/grafana/configmaps-datasources.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "project-prometheus-stack.fullname" . }}-grafana-datasource
-  namespace: {{ default .Values.grafana.sidecar.datasources.searchNamespace (include "project-prometheus-stack.namespace" .) }}
+  namespace: {{ include "project-prometheus-stack.namespace" . }}
 {{- if .Values.grafana.sidecar.datasources.annotations }}
   annotations:
 {{ toYaml .Values.grafana.sidecar.datasources.annotations | indent 4 }}
