--- a/charts/rancher-project-monitoring/0.0.1/charts/grafana/values.yaml
+++ b/charts/rancher-project-monitoring/0.0.1/charts/grafana/values.yaml
@@ -632,8 +632,8 @@ smtp:
 ## Requires at least Grafana 5 to work and can't be used together with parameters dashboardProviders, datasources and dashboards
 sidecar:
   image:
-    repository: rancher/mirrored-kiwigrid-k8s-sidecar
-    tag: 1.12.3
+    repository: quay.io/kiwigrid/k8s-sidecar
+    tag: 1.15.9
     sha: ""
   imagePullPolicy: IfNotPresent
   resources: {}
