Modify clusterPrometheus.url to clusterPrometheus.host

--- a/packages/rancher-project-monitoring/charts/files/federate/federate-scrape-config.yaml
+++ b/packages/rancher-project-monitoring/charts/files/federate/federate-scrape-config.yaml
@@ -9,4 +9,4 @@
 
   static_configs:
     - targets:
-      - "{{ .Values.clusterPrometheus.url }}:{{ .Values.clusterPrometheus.port }}"
+      - "{{ .Values.clusterPrometheus.host }}:{{ .Values.clusterPrometheus.port }}"
