--- a/charts/rancher-project-monitoring/0.0.1/files/federate/federate-scrape-config.yaml
+++ b/charts/rancher-project-monitoring/0.0.1/files/federate/federate-scrape-config.yaml
@@ -9,4 +9,4 @@
 
   static_configs:
     - targets:
-      - "{{ .Values.clusterPrometheus.url }}:{{ .Values.clusterPrometheus.port }}"
+      - "{{ .Values.clusterPrometheus.host }}:{{ .Values.clusterPrometheus.port }}"
