--- a/charts/prometheus-federator/0.0.1/charts/helmProjectOperator/values.yaml
+++ b/charts/prometheus-federator/0.0.1/charts/helmProjectOperator/values.yaml
@@ -29,6 +29,8 @@ global:
   imagePullSecrets: []
   # - name: "image-pull-secret"
 
+helmApiVersion: dummy.cattle.io/v1alpha1
+
 nameOverride: ""
 
 namespaceOverride: ""
