--- a/charts/prometheus-federator/0.0.1/charts/helmProjectOperator/templates/cleanup.yaml
+++ b/charts/prometheus-federator/0.0.1/charts/helmProjectOperator/templates/cleanup.yaml
@@ -28,8 +28,19 @@ spec:
           - -c
           - >
             echo "Labeling all ProjectHelmCharts with helm.cattle.io/helm-project-operator-cleanup=true";
+            EXPECTED_HELM_API_VERSION={{ .Values.helmApiVersion }};
+            IFS=$'\n';
             for namespace in $(kubectl get namespaces -l helm.cattle.io/helm-project-operated=true --no-headers -o=custom-columns=NAME:.metadata.name); do
-              kubectl label projecthelmcharts -n ${namespace} helm.cattle.io/helm-project-operator-cleanup=true --all --overwrite;
+              for projectHelmChartAndHelmApiVersion in $(kubectl get projecthelmcharts -n ${namespace} --no-headers -o=custom-columns=NAME:.metadata.name,HELMAPIVERSION:.spec.helmApiVersion); do
+                projectHelmChartAndHelmApiVersion=$(echo ${projectHelmChartAndHelmApiVersion} | xargs);
+                projectHelmChart=$(echo ${projectHelmChartAndHelmApiVersion} | cut -d' ' -f1);
+                helmApiVersion=$(echo ${projectHelmChartAndHelmApiVersion} | cut -d' ' -f2);
+                if [[ ${helmApiVersion} != ${EXPECTED_HELM_API_VERSION} ]]; then
+                  echo "Skipping marking ${namespace}/${projectHelmChart} with cleanup annotation since spec.helmApiVersion: ${helmApiVersion} is not ${EXPECTED_HELM_API_VERSION}";
+                  continue;
+                fi;
+                kubectl label projecthelmcharts -n ${namespace} ${projectHelmChart} helm.cattle.io/helm-project-operator-cleanup=true --overwrite;
+              done;
             done;
       containers:
         - name: ensure-subresources-deleted
@@ -39,12 +50,15 @@ spec:
           - /bin/sh
           - -c
           - >
-            echo "Ensuring HelmCharts and HelmReleases are deleted from {{ .Release.Namespace }}...";
-            while [[ "$(kubectl get helmcharts,helmreleases -n {{ .Release.Namespace }} 2>&1)" != "No resources found in {{ .Release.Namespace }} namespace." ]]; do
-              echo "waiting for HelmCharts and HelmReleases to be deleted from {{ .Release.Namespace }}... sleeping 3 seconds";
+            SYSTEM_NAMESPACE={{ .Release.Namespace }}
+            EXPECTED_HELM_API_VERSION={{ .Values.helmApiVersion }};
+            HELM_API_VERSION_TRUNCATED=$(echo ${EXPECTED_HELM_API_VERSION} | cut -d'/' -f0);
+            echo "Ensuring HelmCharts and HelmReleases are deleted from ${SYSTEM_NAMESPACE}...";
+            while [[ "$(kubectl get helmcharts,helmreleases -l helm.cattle.io/helm-api-version=${HELM_API_VERSION_TRUNCATED} -n ${SYSTEM_NAMESPACE} 2>&1)" != "No resources found in ${SYSTEM_NAMESPACE} namespace." ]]; do
+              echo "waiting for HelmCharts and HelmReleases to be deleted from ${SYSTEM_NAMESPACE}... sleeping 3 seconds";
               sleep 3;
             done;
-            echo "Successfully deleted all HelmCharts and HelmReleases in {{ .Release.Namespace }}!"
+            echo "Successfully deleted all HelmCharts and HelmReleases in ${SYSTEM_NAMESPACE}!";
       restartPolicy: OnFailure
       nodeSelector: {{ include "linux-node-selector" . | nindent 8 }}
       {{- if .Values.cleanup.nodeSelector }}
