--- a/charts/prometheus-federator/0.0.1/charts/helmProjectOperator/templates/deployment.yaml
+++ b/charts/prometheus-federator/0.0.1/charts/helmProjectOperator/templates/deployment.yaml
@@ -39,6 +39,19 @@ spec:
 {{- if .Values.global.cattle.clusterId }}
           - --cluster-id={{ .Values.global.cattle.clusterId }}
 {{- end }}
+{{- if .Values.releaseRoleBindings.aggregate }}
+{{- if .Values.releaseRoleBindings.clusterRoleRefs }}
+{{- if .Values.releaseRoleBindings.clusterRoleRefs.admin }}
+          - --admin-cluster-role={{ .Values.releaseRoleBindings.clusterRoleRefs.admin }}
+{{- end }}
+{{- if .Values.releaseRoleBindings.clusterRoleRefs.edit }}
+          - --edit-cluster-role={{ .Values.releaseRoleBindings.clusterRoleRefs.edit }}
+{{- end }}
+{{- if .Values.releaseRoleBindings.clusterRoleRefs.view }}
+          - --view-cluster-role={{ .Values.releaseRoleBindings.clusterRoleRefs.view }}
+{{- end }}
+{{- end }}
+{{- end }}
 {{- if .Values.debug }}
           - --debug
           - --debug-level={{ .Values.debugLevel }}
