Collect federated metrics that do not come from jobs but have namespaces set to support recording rule federation

--- a/packages/rancher-project-monitoring/charts/files/federate/federate-scrape-config.yaml
+++ b/packages/rancher-project-monitoring/charts/files/federate/federate-scrape-config.yaml
@@ -6,6 +6,7 @@
   params:
     'match[]':
       - '{namespace=~"{{ .Values.global.cattle.projectNamespaces | join "|" }}", job=~"kube-state-metrics|kubelet"}'
+      - '{namespace=~"{{ .Values.global.cattle.projectNamespaces | join "|" }}", job=""}'
 
   static_configs:
     - targets:
