--- a/charts/rancher-project-monitoring/0.0.1/files/federate/federate-scrape-config.yaml
+++ b/charts/rancher-project-monitoring/0.0.1/files/federate/federate-scrape-config.yaml
@@ -6,6 +6,7 @@
   params:
     'match[]':
       - '{namespace=~"{{ .Values.global.cattle.projectNamespaces | join "|" }}", job=~"kube-state-metrics|kubelet"}'
+      - '{namespace=~"{{ .Values.global.cattle.projectNamespaces | join "|" }}", job=""}'
 
   static_configs:
     - targets:
