--- a/packages/rancher-project-monitoring/charts/templates/prometheus/federate.yaml
+++ b/packages/rancher-project-monitoring/charts/templates/prometheus/federate.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.prometheus.enabled }}
+{{- if and .Values.prometheus.enabled .Values.federate.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
