--- a/packages/rancher-project-monitoring/charts/templates/prometheus/prometheus.yaml
+++ b/packages/rancher-project-monitoring/charts/templates/prometheus/prometheus.yaml
@@ -215,9 +215,11 @@ spec:
   imagePullSecrets:
 {{ toYaml .Values.global.imagePullSecrets | indent 4 }}
 {{- end }}
+{{- if .Values.federate.enabled }}
   additionalScrapeConfigs:
     name: {{ template "project-prometheus-stack.fullname" . }}-federate
     key: federate-scrape-config.yaml
+{{- end }}
 {{- if .Values.prometheus.prometheusSpec.containers }}
   containers:
 {{ tpl .Values.prometheus.prometheusSpec.containers $ | indent 4 }}
