--- a/charts/rancher-project-monitoring/0.0.1/templates/prometheus/federate.yaml
+++ b/charts/rancher-project-monitoring/0.0.1/templates/prometheus/federate.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.prometheus.enabled }}
+{{- if and .Values.prometheus.enabled .Values.federate.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
