--- a/charts/prometheus-federator/0.0.1/charts/helmProjectOperator/templates/system-namespaces-configmap.yaml
+++ b/charts/prometheus-federator/0.0.1/charts/helmProjectOperator/templates/system-namespaces-configmap.yaml
@@ -10,9 +10,9 @@ data:
     {
 {{- if .Values.projectReleaseNamespaces.enabled }}
 {{- if .Values.projectReleaseNamespaces.labelValue }}
-      "projectReleaseLabelValue": {{ .Values.projectReleaseNamespaces.labelValue }},
+      "projectReleaseLabelValue": {{ .Values.projectReleaseNamespaces.labelValue | quote }},
 {{- else if .Values.global.cattle.systemProjectId }}
-      "projectReleaseLabelValue": {{ .Values.global.cattle.systemProjectId }},
+      "projectReleaseLabelValue": {{ .Values.global.cattle.systemProjectId | quote }},
 {{- else }}
       "projectReleaseLabelValue": "",
 {{- end }}
