Add flags allowing disabling embedded Helm Locker or Helm Controller

--- a/packages/prometheus-federator/charts/values.yaml
+++ b/packages/prometheus-federator/charts/values.yaml
@@ -37,6 +37,13 @@ helmProjectOperator:
 
   nameOverride: prometheus-federator
 
+  helmController:
+    # Note: should be disabled for RKE2 clusters since they already run Helm Controller to manage internal Kubernetes components
+    enabled: true
+
+  helmLocker:
+    enabled: true
+
   ## valuesOverride overrides values that are set on each Project Prometheus Stack Helm Chart deployment on an operator level
   ## all values provided here will override any user-provided values automatically
   valuesOverride:
