Ensure container metrics from k3sServer can still be scraped with different job name

--- a/packages/rancher-project-monitoring/generated-changes/overlay/files/federate/federate-scrape-config.yaml
+++ b/packages/rancher-project-monitoring/generated-changes/overlay/files/federate/federate-scrape-config.yaml
@@ -5,7 +5,7 @@
 
   params:
     'match[]':
-      - '{namespace=~"{{ include "project-prometheus-stack.projectNamespaceList" . | replace "," "|" }}", job=~"kube-state-metrics|kubelet"}'
+      - '{namespace=~"{{ include "project-prometheus-stack.projectNamespaceList" . | replace "," "|" }}", job=~"kube-state-metrics|kubelet|k3s-server"}'
       - '{namespace=~"{{ include "project-prometheus-stack.projectNamespaceList" . | replace "," "|" }}", job=""}'
 
   static_configs:
