Update rancher-project-monitoring to new base 970470cf8b779b926e8ced60a10f270e401a44a4

--- a/packages/rancher-project-monitoring/package.yaml
+++ b/packages/rancher-project-monitoring/package.yaml
@@ -1,8 +1,8 @@
 workingDir: ""
 url: https://github.com/rancher/charts.git
-subdirectory: charts/rancher-monitoring/101.1.0+up40.1.2
-commit: 474720e374b13e27ae35566d6f4b7714a37d5814
-version: 0.2.0-rc3
+subdirectory: charts/rancher-monitoring/102.0.0+up40.1.2
+commit: 970470cf8b779b926e8ced60a10f270e401a44a4
+version: 0.2.0
 ignoreDependencies:
   - hardenedKubelet
   - hardenedNodeExporter
