--- a/packages/rancher-project-monitoring/generated-changes/exclude/templates/prometheus-operator/admission-webhooks/job-patch/clusterrole.yaml
+++ b/packages/rancher-project-monitoring/generated-changes/exclude/templates/prometheus-operator/admission-webhooks/job-patch/clusterrole.yaml
@@ -18,7 +18,7 @@ rules:
     verbs:
       - get
       - update
-{{- if .Values.global.rbac.pspEnabled }}
+{{- if .Values.global.cattle.psp.enabled }}
 {{- $kubeTargetVersion := default .Capabilities.KubeVersion.GitVersion .Values.kubeTargetVersionOverride }}
 {{- if semverCompare "> 1.15.0-0" $kubeTargetVersion }}
   - apiGroups: ['policy']
