--- a/packages/rancher-project-monitoring/generated-changes/exclude/templates/prometheus-operator/psp.yaml
+++ b/packages/rancher-project-monitoring/generated-changes/exclude/templates/prometheus-operator/psp.yaml
@@ -1,5 +1,4 @@
-{{- if .Capabilities.APIVersions.Has "policy/v1beta1/PodSecurityPolicies" }}
-{{- if and .Values.prometheusOperator.enabled .Values.global.rbac.create .Values.global.rbac.pspEnabled }}
+{{- if and .Values.prometheusOperator.enabled .Values.global.rbac.create .Values.global.cattle.psp.enabled }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
@@ -43,5 +42,4 @@ spec:
       - min: 0
         max: 65535
   readOnlyRootFilesystem: false
-{{- end }}
 {{- end }}
