--- a/charts/rancher-project-monitoring/0.2.2/values.yaml
+++ b/charts/rancher-project-monitoring/0.2.2/values.yaml
@@ -78,6 +78,9 @@ global:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
+  networkPolicy:
+    egress:
+      - {}
   rbac:
     ## Create RBAC resources for ServiceAccounts and users
     ##
